add users seeds and services management
